--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/Laixiaonv/test.git",
+  "homepage": "https://github.com/Laixiaonv/react-gh-pages.git",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
